--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#journal-scroll::-webkit-scrollbar {
+  width: 6px;
+  cursor: pointer;
+  background-color: rgba(229, 231, 235, var(--bg-opacity));
+}
+
+#journal-scroll::-webkit-scrollbar-track {
+  background-color: rgba(229, 231, 235, var(--bg-opacity));
+  cursor: pointer;
+}
+#journal-scroll::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  background-color: #a0aec0;
+  border-radius: 3px;
+}
+#journal-scroll::-webkit-scrollbar-thumb:hover {
+  cursor: pointer;
+  background-color: #000000;
+}
+/* isko transition krke use krke thekk kr skte h  bhaua */
